fixed horizontal scroll on mobile

--- a/web235/final_project/wet_my_plants/styles/styles.css
+++ b/web235/final_project/wet_my_plants/styles/styles.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 :root {
     --main-white: #fff9ea;
     --main-tan: #f8ecc1;
@@ -14,9 +8,19 @@
     --main-brown: #967a59;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    width: 100%;
+    overflow-x: hidden;
+}
 body {
     background-color: var(--main-tan);
     width: 100%;
+    overflow-x: hidden;
 }
 
 /* ____________________ HEADER NAV BAR SETTINGS ________________________________________ */
@@ -24,6 +28,7 @@ body {
 header {
     background-color: var(--main-darktan);
     height: 100px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -255,7 +260,7 @@ h1 {
     width: 100%;
     height: 100px;
     min-width: 300px;
-    /* max-width: 800px; */
+    /* max-width: 100%; */
     max-height: 150px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -626,6 +631,7 @@ h1 {
         margin: 20px 10px;
         cursor: pointer;
         z-index: 9999;
+
     }
 
 
@@ -635,9 +641,10 @@ h1 {
         border-radius: 50%;
         background-color: #f8ecc1;
         display: block;
-        margin-right: -40px;
+        position: absolute;
+        top: -20px;
+        right: -40px;
         order: 1;
-
     }
 
     .menu-icon {
